Correct tag color for dark mode

--- a/themes/startwords/assets/scss/_darkmode.scss
+++ b/themes/startwords/assets/scss/_darkmode.scss
@@ -18,8 +18,15 @@
         }
     }
 
+    .tags {
+        li {
+            color: $off-white;
 
-
+            a, a:visited {
+                color: $off-white;
+            }
+        }
+    }
 }
 
 body.article.darkmode .footnotes ol li {
